# SECourseProject

./: .gitignore  CMakeLists.txt  README.md  auth.cpp  auth.h  dirty.cpp  entity.h  main.cpp  menu.cpp  menu.h  product.cpp  product.h  serialize.cpp  serialize.h  terminal.cpp  terminal.h  test.cpp  ui.cpp  ui.h
.github/workflows/: build.yaml
docs/: RequirementsAnalysis.md
example/: products.json  users.json
library-mgmt/: main.cpp
library-mgmt/src/: auth.cpp  auth.h  models.cpp  models.h  terminal.cpp  terminal.h  ui.cpp  ui.h
prod-mgmt/: main.cpp  test.cpp
prod-mgmt/src/: auth.cpp  auth.h  dirty.h  models.cpp  models.h  product.cpp  product.h  terminal.cpp  terminal.h  ui.cpp  ui.h  utils.h
shared/: auth.cpp  auth.h  dirty.h  menu.cpp  menu.h  model.h  terminal.h  utils.cpp  utils.h
src/: auth.cpp  auth.h  dirty.h  main.cpp  menu.cpp  menu.h  product.cpp  product.h  terminal.cpp  terminal.h  ui.cpp  ui.h  utils.cpp
ui/: crud.cpp  crud.h  ui.cpp  ui.h
